fix: overflow-x: hidden for no horizontal scroll

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -17,3 +17,7 @@ html, body, #root {
     flex-direction: column;
     font-family: $montserratFont;
 }
+html{
+    overflow-x: hidden;
+    scrollbar-width: none;
+}
