--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -13,6 +13,11 @@ html, body, #root {
   font-family: "Montserrat", sans-serif;
 }
 
+html {
+  overflow-x: hidden;
+  scrollbar-width: none;
+}
+
 footer {
   width: 100%;
   height: 150px;
